kubernetes-cluster-setup/load-balancer/metallb/metallb-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: metallb-test-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
