kubernetes-cluster-setup/load-balancer/metallb/allow-all-ingress.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: istio-ingress
spec:
  podSelector:
    matchLabels:
      istio: ingress
  ingress:
  - {}
  policyTypes:
  - Ingress
